# icedrop

./: .gitignore
core/: Cargo.toml
core/icedrop-core/: Cargo.toml
core/icedrop-core/src/: client.rs  endpoint.rs  lib.rs  proto.rs  server.rs
core/icedrop-core/src/discovery/: mod.rs  msg.rs  server.rs
core/icedrop-core/src/handlers/: file_transfer.rs  handshake.rs  mod.rs  session.rs  utils.rs
core/icedrop-core/src/transfer/: client.rs  mod.rs  msg.rs
core/icedrop-sender/: Cargo.toml
core/icedrop-sender/src/: main.rs
core/icedrop-server/: Cargo.toml
core/icedrop-server/src/: main.rs
core/icedrop-wrapper/: Cargo.toml  build.rs
core/icedrop-wrapper/src/: client.rs  lib.rs  tests.rs
