[package]
name = "icedrop-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
byteorder = "1.4.3"
socket2 = { version = "0.4.2", features = ["all"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
log = "0.4"