[package]
name = "icedrop-sender"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
log = "0.4"
env_logger = "0.9.0"
icedrop-core = { path = "../icedrop-core" }